tests/type-check/good/id.arr


fun <A> id(v :: A):
  v
end 

b :: Number = id(5)
