tests/type-check/bad/mutual-rec.arr


fun here(n :: Number):
  b = there(n)
  b * 2
end

fun there(b :: Boolean):
  b
end
